[gd_scene load_steps=9 format=2]

[ext_resource path="res://1 - Scenes/UI/BuildingMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://1 - Scenes/UI/SpeedController.tscn" type="PackedScene" id=2]
[ext_resource path="res://2 - Scripts/UI/UserInterface.gd" type="Script" id=3]
[ext_resource path="res://1 - Scenes/UI/PurchaseMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://4 - Resources/DungeonFont.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://1 - Scenes/UI/Options.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 148
outline_size = 8
outline_color = Color( 0.156863, 0.156863, 0.156863, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 162
outline_size = 8
outline_color = Color( 0.117647, 0.117647, 0.117647, 1 )
font_data = ExtResource( 5 )

[node name="UserInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 800.0
margin_bottom = 96.0
rect_scale = Vector2( 0.9, 0.9 )
color = Color( 0.196078, 0.196078, 0.196078, 0.941176 )

[node name="ResourceBar" type="HBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_constants/separation = 24

[node name="PurchaseMenu" parent="." instance=ExtResource( 4 )]

[node name="BuildingMenu" parent="." instance=ExtResource( 1 )]
visible = false

[node name="SpeedController" parent="." instance=ExtResource( 2 )]
pause_mode = 1

[node name="PauseMenu" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0

[node name="ColorRect2" type="ColorRect" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.196078, 0.196078, 0.196078, 0.25098 )

[node name="Pause" type="Control" parent="PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0

[node name="ColorRect" type="ColorRect" parent="PauseMenu/Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -275.0
margin_top = -106.0
margin_right = 275.0
margin_bottom = 273.0
color = Color( 0.196078, 0.196078, 0.196078, 0.941176 )

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -125.0
margin_right = 240.0
margin_bottom = 273.0
custom_constants/separation = 24
alignment = 1

[node name="StartButton" type="Button" parent="PauseMenu/Pause/VBoxContainer"]
margin_top = 86.0
margin_right = 480.0
margin_bottom = 145.0
text = "Resume"

[node name="OptionsButton" type="Button" parent="PauseMenu/Pause/VBoxContainer"]
margin_top = 169.0
margin_right = 480.0
margin_bottom = 228.0
text = "Options"

[node name="ExitButton" type="Button" parent="PauseMenu/Pause/VBoxContainer"]
margin_top = 252.0
margin_right = 480.0
margin_bottom = 311.0
text = "Exit to Menu"

[node name="Label" type="Label" parent="PauseMenu/Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -421.0
margin_top = -324.0
margin_right = 422.0
margin_bottom = -161.0
custom_fonts/font = SubResource( 1 )
text = "PAUSED"
align = 1

[node name="Options" parent="PauseMenu" instance=ExtResource( 6 )]
visible = false

[node name="GameOverMenu" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0

[node name="ColorRect2" type="ColorRect" parent="GameOverMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.156863, 0.156863, 0.156863, 0.686275 )

[node name="ColorRect" type="ColorRect" parent="GameOverMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -275.0
margin_top = -32.0
margin_right = 275.0
margin_bottom = 152.0
color = Color( 0.117647, 0.117647, 0.117647, 0.941176 )

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverMenu/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -127.0
margin_right = 240.0
margin_bottom = 95.0
custom_constants/separation = 24
alignment = 1

[node name="ExitButton" type="Button" parent="GameOverMenu/ColorRect/VBoxContainer"]
margin_top = 81.0
margin_right = 480.0
margin_bottom = 140.0
text = "Exit to Menu"

[node name="Label" type="Label" parent="GameOverMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -421.0
margin_top = -324.0
margin_right = 422.0
margin_bottom = -161.0
custom_fonts/font = SubResource( 2 )
text = "GAME OVER"
align = 1
valign = 1

[connection signal="building_selected" from="PurchaseMenu" to="." method="_on_building_selected"]
[connection signal="pressed" from="PauseMenu/Pause/VBoxContainer/StartButton" to="." method="close_pause_menu"]
[connection signal="pressed" from="PauseMenu/Pause/VBoxContainer/OptionsButton" to="." method="open_options"]
[connection signal="pressed" from="PauseMenu/Pause/VBoxContainer/ExitButton" to="." method="exit_to_menu"]
[connection signal="pressed" from="PauseMenu/Options/BackButton" to="." method="close_options"]
[connection signal="pressed" from="GameOverMenu/ColorRect/VBoxContainer/ExitButton" to="." method="exit_to_menu"]

[editable path="PauseMenu/Options"]
